Minor change to data building file and visualization of payment to rental index

--- a/Build Freddie Mac Loan Performance Data.ipynb
+++ b/Build Freddie Mac Loan Performance Data.ipynb
@@ -6,6 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "###WARNING - THIS FILE WILL TAKE A LONG TIME TO RUN\n",
+    "## The author had to run the loan performance data cells manually \n",
+    "## and saved the data to CSV files \n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import gc"
@@ -578,37 +581,8 @@
     "loan_perf_2015=pd.merge(loanDataDF,freddiemac_loan_performance_2015,on=\"Loan Sequence Number\" )\n",
     "loan_perf_2015[\"Postal Code\"]=loan_perf_2015[\"Postal Code\"].astype(int).astype(str)\n",
     "\n",
+    "loan_perf_2015.to_csv(\"loan_perf_2015.csv\")\n",
     "freddiemac_loan_performance_2015=pd.DataFrame()\n",
-    "gc.collect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loan_perf_2015.to_csv(\"loan_perf_2015.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "loan_perf_2016=pd.DataFrame()\n",
     "gc.collect()"
    ]
   },
@@ -1046,23 +1020,6 @@
     "freddiemac_loan_performance_2019=pd.DataFrame()\n",
     "gc.collect()\n",
     "loan_perf_2019.to_csv(\"loan_perf_2019.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "city_loans=pd.concat([\n",
-    "   loan_perf_2015,\n",
-    "   loan_perf_2016,\n",
-    "   loan_perf_2017,\n",
-    "   loan_perf_2018,\n",
-    "    loan_perf_2019\n",
-    "])\n",
-    "\n",
-    "city_loans.to_csv(\"loan_perf_data.csv\")"
    ]
   }
  ],
